fix sizing of product image on detail page so it's not stretched

--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -65,3 +65,21 @@
 	display: flex;
 	flex-wrap: wrap;
 }
+
+.product-detail-box--noImage {
+	height: 300px;
+    width: 500px;
+	background: #eee;
+    overflow: hidden;
+}
+
+.product-detail-box {
+	height: 300px;
+    width: 500px;
+    overflow: hidden;
+}
+.product-detail-box_img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
